fix traduzione italiana accenti

--- a/plugins/aps/src/main/res/values-it-rIT/strings.xml
+++ b/plugins/aps/src/main/res/values-it-rIT/strings.xml
@@ -189,9 +189,9 @@
     <string name="count_steps_watch">count_steps_watch</string>
     <string name="oaps_aimi_evening_factor_summary">% of Reactivity of the plugin between 6 pm and midnight</string>
     <string name="key_oaps_aimi_evening_factor">key_oaps_aimi_evening_factor</string>
-    <string name="oaps_aimi_evening_factor_title">ReattivitÃ  Sera 18:00-24:00</string>
-    <string name="oaps_aimi_afternoon_factor_title">ReattivitÃ  Pomeriggio 12:00-18:00</string>
-    <string name="oaps_aimi_morning_factor_title">ReattivitÃ  Mattina 00-11:00</string>
+    <string name="oaps_aimi_evening_factor_title">Reattività Sera 18:00-24:00</string>
+    <string name="oaps_aimi_afternoon_factor_title">Reattività Pomeriggio 12:00-18:00</string>
+    <string name="oaps_aimi_morning_factor_title">Reattività Mattina 00-11:00</string>
     <string name="oaps_aimi_morning_factor_summary">Morning Reactivity Percentage between midnight and 11 am</string>
     <string name="key_oaps_aimi_morning_factor">key_oaps_aimi_morning_factor</string>
     <string name="oaps_aimi_afternoon_factor_summary">Afternoon reactivity percentage between 12pm and 6 pm</string>
@@ -240,7 +240,7 @@
     <string name="oaps_aimi_cho_summary">Average carbs for a meal. it\'s an estimation not a precise value</string>
     <string name="oaps_aimi_cho_title">CHO media pranzo/cena</string>
     <string name="aimi_preferences">AIMI pannello impostazioni</string>
-    <string name="AAPS_SMB_Settings">SensibilitÃ  - Impostazioni AAPS</string>
+    <string name="AAPS_SMB_Settings">Sensibilità - Impostazioni AAPS</string>
     <string name="oaps_aimi_enableMlTraining_title">Abilita addestramento I.A.</string>
     <string name="OApsAIMI_MealFactor_summary">% of insulin required by the ai for the meal mode.</string>
     <string name="OApsAIMI_MealFactor_title">Meal mode reactivity percentage</string>
@@ -266,17 +266,17 @@
     <string name="OApsAIMI_sleep_Factor_title">Sleep mode reactivity percentage</string>
     <string name="oaps_aimi_sleep_interval_summary">Interval between SMB for the sleep mode.</string>
     <string name="oaps_aimi_sleep_interval_title">SMB interval Sleep Mode</string>
-    <string name="OApsAIMI_Enable_pregnancy">ModalitÃ  gravidanza</string>
-    <string name="OApsAIMI_Enable_honeymoon">ModalitÃ  bambino per un fabbisogno di insulina inferiore rispetto a quello di un adulto</string>
+    <string name="OApsAIMI_Enable_pregnancy">Modalità gravidanza</string>
+    <string name="OApsAIMI_Enable_honeymoon">Modalità bambino per un fabbisogno di insulina inferiore rispetto a quello di un adulto</string>
     <string name="oaps_aimi_HIGHBG_interval_summary">High BG SMB Interval</string>
     <string name="oaps_aimi_HIGHBG_interval_title">High BG SMB Interval</string>
     <string name="openapsaimi_highBG_maxsmb_summary">Max SMB value quando BG Ã¨ maggiore di 120</string>
     <string name="openapsaimi_highBG_maxsmb_title">Max SMB High BG</string>
-    <string name="OApsAIMI_Enable_night_title">Abilita modalitÃ  notturna (smb/2)</string>
-    <string name="prebolus_lunch_mode_summary">Prebolo 1/2 modalitÃ  pranzo</string>
-    <string name="prebolus2_lunch_mode_summary">Prebolo 2/2 modalitÃ  pranzo</string>
-    <string name="prebolus_lunch_mode_title">ModalitÃ  Pranzo Prebolo 1/2</string>
-    <string name="prebolus2_lunch_mode_title">ModalitÃ  Pranzo Prebolo 2/2</string>
+    <string name="OApsAIMI_Enable_night_title">Abilita modalità notturna (smb/2)</string>
+    <string name="prebolus_lunch_mode_summary">Prebolo 1/2 modalità pranzo</string>
+    <string name="prebolus2_lunch_mode_summary">Prebolo 2/2 modalità pranzo</string>
+    <string name="prebolus_lunch_mode_title">Modalità Pranzo Prebolo 1/2</string>
+    <string name="prebolus2_lunch_mode_title">Modalità Pranzo Prebolo 2/2</string>
     <string name="oaps_aimi_LunchAdjFact_summary">Lunch mode Dynisf Factor</string>
     <string name="oaps_aimi_LunchAdjFact_title">Lunch Mode Dynisf</string>
     <string name="prebolus_Dinner_mode_summary">Dinner mode prebolus 1/2</string>
@@ -312,21 +312,21 @@
     <string name="oaps_aimi_BF_interval_summary">Interval between 2 SMB mode breakfast</string>
     <string name="oaps_aimi_BF_interval_title">SMB Interval Mode Breakfast</string>
     <!--    autoISF -->
-    <string name="half_basal_exercise_target_title">Obiettivo Di Esercizio MetÃ  Basale</string>
+    <string name="half_basal_exercise_target_title">Obiettivo Di Esercizio Metà Basale</string>
     <string name="half_basal_exercise_target_summary">Impostare un numero, ad esempio 160, significa che quando il target temporaneo Ã¨ 160 mg/dL e l\'opzione aumenta la sensibilitÃ  se rileva sensibilitÃ  Ã¨ attivo, esegue il 50%% della basale a questo livello (120 = 75%%; 140 = 60%%).</string>
     <string name="autoISF_settings_title">Impostazioni AutoISF</string>
-    <string name="autoISF_settings_summary">AutoISF consente di adattare il fattore di sensibilitÃ  all\'insulina (ISF) in vari scenari di comportamento glicemico\n\nPuÃ² anche adattare le impostazioni di erogazione SMB</string>
+    <string name="autoISF_settings_summary">AutoISF consente di adattare il fattore di sensibilità all\'insulina (ISF) in vari scenari di comportamento glicemico\n\nPuÃ² anche adattare le impostazioni di erogazione SMB</string>
     <string name="smb_delivery_settings_title">Impostazioni di erogazione SMB</string>
     <string name="smb_delivery_settings_summary">Insieme di opzioni per aumentare le dimensioni effettive di SMB che possono essere erogate in situazioni in cui ISF Ã¨ stato rafforzato, cioÃ¨ con una cifra ISF piuttosto bassa. \n \nUTILIZZARE CON CAUTELA</string>
     <string name="openapsama_enable_autoISF">Abilita l\'adattamento ISF in base al comportamento del glucosio</string>
-    <string name="openapsama_autoISF_max_summary">Simile a autosens_max questo definisce quanto forte ISF puÃ² diventare.\n\nIl valore predefinito 1.0 disattiva in modo efficace questo effetto.\n\nATTENZIONE: Fai molta attenzione quando usi valori superiori a 2,5</string>
+    <string name="openapsama_autoISF_max_summary">Simile a autosens_max questo definisce quanto forte ISF può diventare.\n\nIl valore predefinito 1.0 disattiva in modo efficace questo effetto.\n\nATTENZIONE: Fai molta attenzione quando usi valori superiori a 2,5</string>
     <string name="openapsama_autoISF_min_summary">Simile a autosens_min questo definisce quanto debole ISF possa diventare.\n\nIl valore predefinito 1.0 disattiva efficacemente questo effetto.</string>
-    <string name="openapsama_dura_ISF_weight_summary">Questo Ã¨ il peso applicato durante eventi di glucosio alto di lunga durata e che rafforza ISF aumentando cosÃ¬ potenzialmente la somministrazione di insulina.\n\nIl valore predefinito 0.0 disattiva efficacemente questo effetto.</string>
-    <string name="openapsama_lower_ISFrange_weight_summary">Questo Ã¨ il peso applicato mentre il glucosio Ã¨ al di sotto del target e che indebolisce ISF riducendo potenzialmente la somministrazione di insulina.\n\nIl valore predefinito 0.0 disattiva efficacemente questo effetto.</string>
-    <string name="openapsama_higher_ISFrange_weight_summary">Questo Ã¨ il peso applicato mentre il glucosio Ã¨ superiore allâ€™obiettivo e che rafforza lâ€™ISF aumentando potenzialmente la somministrazione di insulina.\n\nIl valore predefinito 0.0 disattiva efficacemente questo effetto.</string>
-    <string name="openapsama_pp_ISF_weight_summary">Questo Ã¨ il peso applicato mentre il glucosio sta aumentando e che rafforza ISF aumentando potenzialmente la somministrazione di insulina.\n\nIl valore predefinito 0.0 disattiva efficacemente questo effetto.</string>
-    <string name="openapsama_bgAccel_ISF_weight_summary">Questo Ã¨ il peso applicato mentre il glucosio accelera e che rafforza ISF aumentando potenzialmente la somministrazione di insulina.\n\nIl valore predefinito 0.0 disattiva efficacemente questo effetto.</string>
-    <string name="openapsama_bgBrake_ISF_weight_summary">Questo Ã¨ il peso applicato mentre il glucosio decelera e che indebolisce ISF riducendo potenzialmente la somministrazione di insulina.\n\nIl valore predefinito 0.0 disattiva efficacemente questo effetto.</string>
+    <string name="openapsama_dura_ISF_weight_summary">Questo è il peso applicato durante eventi di glucosio alto di lunga durata e che rafforza ISF aumentando cosÃ¬ potenzialmente la somministrazione di insulina.\n\nIl valore predefinito 0.0 disattiva efficacemente questo effetto.</string>
+    <string name="openapsama_lower_ISFrange_weight_summary">Questo è il peso applicato mentre il glucosio è al di sotto del target e che indebolisce ISF riducendo potenzialmente la somministrazione di insulina.\n\nIl valore predefinito 0.0 disattiva efficacemente questo effetto.</string>
+    <string name="openapsama_higher_ISFrange_weight_summary">Questo è il peso applicato mentre il glucosio è superiore all'obiettivo e che rafforza l'ISF aumentando potenzialmente la somministrazione di insulina.\n\nIl valore predefinito 0.0 disattiva efficacemente questo effetto.</string>
+    <string name="openapsama_pp_ISF_weight_summary">Questo è il peso applicato mentre il glucosio sta aumentando e che rafforza ISF aumentando potenzialmente la somministrazione di insulina.\n\nIl valore predefinito 0.0 disattiva efficacemente questo effetto.</string>
+    <string name="openapsama_bgAccel_ISF_weight_summary">Questo è il peso applicato mentre il glucosio accelera e che rafforza ISF aumentando potenzialmente la somministrazione di insulina.\n\nIl valore predefinito 0.0 disattiva efficacemente questo effetto.</string>
+    <string name="openapsama_bgBrake_ISF_weight_summary">Questo è il peso applicato mentre il glucosio decelera e che indebolisce ISF riducendo potenzialmente la somministrazione di insulina.\n\nIl valore predefinito 0.0 disattiva efficacemente questo effetto.</string>
     <string name="openapsama_autoISF_max">Rapporto max autoISF\n(autoISF_max)</string>
     <string name="openapsama_autoISF_min">Rapporto min autoISF\n(autoISF_min)</string>
     <string name="openapsama_lower_ISFrange_weight">livello inferiore all\'intervallo ISF\n(lower_ISFrange_weight)</string>
@@ -340,13 +340,13 @@
     <string name="openapsama_smb_delivery_ratio_max">erogazione SMB variabile, livello superiore\n(smb_delivery_ratio_max)</string>
     <string name="openapsama_smb_delivery_ratio_bg_range">rapporto di erogazione SMB variabile, intervallo di glucosio mappato\n(smb_delivery_ratio_bg_range)</string>
     <string name="openapsama_smb_max_range_extension">Estensione massima del raggio SMB/UAM\n(smb_max_range_extension)</string>
-    <string name="openapsama_smb_delivery_ratio_summary">Valore predefinito: 0,5 Questo Ã¨ un altro importante limite di sicurezza di OpenAPS e specifica quale parte dell\'insulina totale necessaria puÃ² essere somministrata come SMB. Questo per evitare che le persone si trovino in una zona pericolosa impostando contemporaneamente le richieste SMB dal telefono dei caregiver. Aumentare lentamente e con cautela questo valore sperimentale.</string>
-    <string name="openapsama_smb_delivery_ratio_min_summary">Valore predefinito: 0,5 Questo Ã¨ il limite inferiore di un rapporto crescente lineare anzichÃ© il valore fisso soprastante.</string>
-    <string name="openapsama_smb_delivery_ratio_max_summary">Valore predefinito: 0,5 Questo Ã¨ il limite superiore di un rapporto che aumenta linearmente anzichÃ© il valore fisso sopra.</string>
-    <string name="openapsama_smb_delivery_ratio_bg_range_summary">Valore predefinito: 0. Il rapporto di erogazione SMB che aumenta linearmente Ã¨ mappato sull\'intervallo di glucosio [target_bg, target_bg+bg_range].\nA target_bg il rapporto SMB Ã¨ smb_delivery_ratio_min, a target_bg+bg_range Ã¨ smb_delivery_ratio_max\nCon 0 il rapporto SMB che aumenta linearmente Ã¨ disattivato e viene utilizzato il rapporto fisso smb_delivery_ratio.</string>
-    <string name="openapsama_smb_max_range_extension_summary">Valore predefinito: 1 Questo Ã¨ un altro parametro chiave della sicurezza OpenAPS, che specifica per quale fattore Ã¨ possibile superare i soliti 120 minuti maxSMB/maxUAM. Aumentare lentamente questo valore sperimentale con cautela.</string>
+    <string name="openapsama_smb_delivery_ratio_summary">Valore predefinito: 0,5 Questo è un altro importante limite di sicurezza di OpenAPS e specifica quale parte dell\'insulina totale necessaria puÃ² essere somministrata come SMB. Questo per evitare che le persone si trovino in una zona pericolosa impostando contemporaneamente le richieste SMB dal telefono dei caregiver. Aumentare lentamente e con cautela questo valore sperimentale.</string>
+    <string name="openapsama_smb_delivery_ratio_min_summary">Valore predefinito: 0,5 Questo è il limite inferiore di un rapporto crescente lineare anzichè il valore fisso soprastante.</string>
+    <string name="openapsama_smb_delivery_ratio_max_summary">Valore predefinito: 0,5 Questo è il limite superiore di un rapporto che aumenta linearmente anzichÃ© il valore fisso sopra.</string>
+    <string name="openapsama_smb_delivery_ratio_bg_range_summary">Valore predefinito: 0. Il rapporto di erogazione SMB che aumenta linearmente è mappato sull\'intervallo di glucosio [target_bg, target_bg+bg_range].\nA target_bg il rapporto SMB Ã¨ smb_delivery_ratio_min, a target_bg+bg_range Ã¨ smb_delivery_ratio_max\nCon 0 il rapporto SMB che aumenta linearmente Ã¨ disattivato e viene utilizzato il rapporto fisso smb_delivery_ratio.</string>
+    <string name="openapsama_smb_max_range_extension_summary">Valore predefinito: 1 Questo è un altro parametro chiave della sicurezza OpenAPS, che specifica per quale fattore è possibile superare i soliti 120 minuti maxSMB/maxUAM. Aumentare lentamente questo valore sperimentale con cautela.</string>
     <string name="enableSMB_EvenOn_OddOff_always">Abilita l\'attivazione alternativa di SMB a seconda che il target attivo sia un numero pari</string>
-    <string name="enableSMB_EvenOn_OddOff_always_summary">\nenabled ...\nif il target attivo(mmol/L) ha una cifra decimale pari\no il bersaglio attivo(mg/dL) Ã¨ un numero pari\n\nnon abilitato altrimenti</string>
+    <string name="enableSMB_EvenOn_OddOff_always_summary">\nenabled ...\nif il target attivo(mmol/L) ha una cifra decimale pari\no il bersaglio attivo(mg/dL) è un numero pari\n\nnon abilitato altrimenti</string>
     <string name="oaps_aimi_enableDeleteLine_title">Enable the possibility to delete one day in the ML Training</string>
     <string name="oaps_aimi_logsize_summary">log colon size</string>
     <string name="oaps_aimi_logsize_title">Numero linee tabella analisi AIMI nella scheda Loop</string>
