--- a/plugins/aps/src/main/res/values/strings.xml
+++ b/plugins/aps/src/main/res/values/strings.xml
@@ -252,6 +252,7 @@
     <string name="oaps_aimi_cho_summary">Average carbs for a meal. it\'s an estimation not a precise value</string>
     <string name="oaps_aimi_cho_title">CHO Meal average lunch or dinner</string>
     <string name="aimi_preferences">AIMI specifics settings</string>
+    <string name="user_preferences">Global User Preferences</string>
     <string name="AAPS_SMB_Settings">AAPS SMB Settings</string>
     <string name="oaps_aimi_enableMlTraining_title">Enable ML training calculation</string>
     <string name="OApsAIMI_MealFactor_summary">% of insulin required by the ai for the meal mode.</string>
