--- a/plugins/aps/src/main/res/values-it-rIT/strings.xml
+++ b/plugins/aps/src/main/res/values-it-rIT/strings.xml
@@ -241,12 +241,12 @@
     <string name="oaps_aimi_cho_title">CHO media pranzo/cena</string>
     <string name="aimi_preferences">AIMI pannello impostazioni</string>
     <string name="user_preferences">Profilo utente AIMI</string>
-    <string name="reactivity_preferences">Glicemia minore di 120</string>
-    <string name="high_BG_preferences">Glicemia maggiore di 120</string>
+    <string name="reactivity_preferences">Glicemia minore di 120 - Impostazioni</string>
+    <string name="high_BG_preferences">Glicemia > di 120 - Impostazioni</string>
     <string name="training_ml_modes_preferences">HCL - Modalità pasto manuale</string>
-    <string name="autodrive_preferences">FLC - Autodrive - Rilevamento pasti automatico</string>
+    <string name="autodrive_preferences">FLC - Autodrive - Rilevamento pasto</string>
     <string name="AAPS_SMB_Settings">Sensibilità - Impostazioni AAPS</string>
-    <string name="oaps_aimi_enableMlTraining_title">Abilita addestramento I.A.</string>
+    <string name="oaps_aimi_enableMlTraining_title">Abilita apprendimento A.I.</string>
     <string name="OApsAIMI_MealFactor_summary">% of insulin required by the ai for the meal mode.</string>
     <string name="OApsAIMI_MealFactor_title">Meal mode reactivity percentage</string>
     <string name="oaps_aimi_meal_interval_summary">Interval between SMB for the meal mode.</string>
