--- a/plugins/aps/src/main/res/values-it-rIT/strings.xml
+++ b/plugins/aps/src/main/res/values-it-rIT/strings.xml
@@ -241,7 +241,7 @@
     <string name="oaps_aimi_cho_title">CHO media pranzo/cena</string>
     <string name="aimi_preferences">AIMI pannello impostazioni</string>
     <string name="user_preferences">Profilo utente AIMI</string>
-    <string name="reactivity_preferences">Glicemia minore di 120 - Impostazioni</string>
+    <string name="reactivity_preferences"><![CDATA[Glicemia < di 120 - Impostazioni]]></string>
     <string name="high_BG_preferences">Glicemia > di 120 - Impostazioni</string>
     <string name="training_ml_modes_preferences">HCL - Modalità pasto manuale</string>
     <string name="autodrive_preferences">FLC - Autodrive - Rilevamento pasto</string>
