--- a/plugins/aps/src/main/res/values/strings.xml
+++ b/plugins/aps/src/main/res/values/strings.xml
@@ -253,10 +253,10 @@
     <string name="oaps_aimi_cho_title">CHO Meal average lunch or dinner</string>
     <string name="aimi_preferences">AIMI specifics settings</string>
     <string name="user_preferences">Global User Preferences</string>
-    <string name="reactivity_preferences">Global User Preferences</string>
+    <string name="reactivity_preferences"><![CDATA[Reactivity BG < 120]]></string>
     <string name="high_BG_preferences">High BG Preferences (BG > 120)</string>
-    <string name="training_ml_modes_preferences">Training ML and Modes</string>
-    <string name="autodrive_preferences">Autodrive settings</string>
+    <string name="training_ml_modes_preferences">HCL - Manual Modes</string>
+    <string name="autodrive_preferences">FCL - Autodrive settings</string>
     <string name="AAPS_SMB_Settings">AAPS SMB Settings</string>
     <string name="oaps_aimi_enableMlTraining_title">Enable ML training calculation</string>
     <string name="OApsAIMI_MealFactor_summary">% of insulin required by the ai for the meal mode.</string>
