--- a/plugins/aps/src/main/res/values/strings.xml
+++ b/plugins/aps/src/main/res/values/strings.xml
@@ -186,7 +186,7 @@
     <string name="not_available_full">Not available</string>
     <string name="pump_disconnected">Pump disconnected</string>
     <string name="key_openapsaimi_settings">key_openapsaimi_settings</string>
-    <string name="openapsaimi">"OpenapsAIMI Settings "</string>
+    <string name="openapsaimi">"AIMI 3.3"</string>
     <string name="openapsaimi_maxsmb_summary">Value of max smb size</string>
     <string name="key_openapsaimi_max_smb">key_openapsaimi_max_smb</string>
     <string name="openapsaimi_maxsmb_title">OpenapsAIMI Max SMB</string>
