--- a/plugins/aps/src/main/res/values/strings.xml
+++ b/plugins/aps/src/main/res/values/strings.xml
@@ -394,4 +394,6 @@
     <string name="prebolussmall_autodrive_mode_title">snack autodrive prebolus/early meal detection</string>
     <string name="autodrive_max_basal_summary">Meal early detection, fix the maxbasal during 30 minutes</string>
     <string name="autodrive_max_basal_title">Meal Early Detection TBR</string>
+    <string name="user_preferences_title_menu">Global User Preferences</string>
+
 </resources>
