nuovi sottomenu intestazioni principali

--- a/plugins/aps/src/main/res/values/strings.xml
+++ b/plugins/aps/src/main/res/values/strings.xml
@@ -258,8 +258,8 @@
     <string name="user_preferences">Global User Preferences</string>
     <string name="reactivity_preferences"><![CDATA[Reactivity BG < 120]]></string>
     <string name="high_BG_preferences">High BG Preferences (BG > 120)</string>
-    <string name="training_ml_modes_preferences">HCL - Manual Modes</string>
-    <string name="autodrive_preferences">FCL - Autodrive settings</string>
+    <string name="training_ml_modes_preferences">Training and Manual Modes</string>
+    <string name="autodrive_preferences">Autodrive settings</string>
     <string name="AAPS_SMB_Settings">AAPS SMB Settings</string>
     <string name="oaps_aimi_enableMlTraining_title">Enable ML training calculation</string>
     <string name="OApsAIMI_MealFactor_summary">% of insulin required by the ai for the meal mode.</string>
@@ -395,5 +395,10 @@
     <string name="autodrive_max_basal_summary">Meal early detection, fix the maxbasal during 30 minutes</string>
     <string name="autodrive_max_basal_title">Meal Early Detection TBR</string>
     <string name="user_preferences_title_menu">Global User Preferences</string>
+    <string name="autodrive_preferences_title_menu">Autodrive settings</string>
+    <string name="manual_modes_preferences_title_menu">Training ML and Modes</string>
+    <string name="bg_under_120_preferences_title_menu"><![CDATA[Reactivity BG < 120]]></string>
+    <string name="bg_over_120_preferences_title_menu">High BG Preferences (BG > 120)</string>
+    <string name="aaps_preferences_title_menu">AAPS SMB Settings</string>
 
 </resources>
