--- a/plugins/aps/src/main/res/values-it-rIT/strings.xml
+++ b/plugins/aps/src/main/res/values-it-rIT/strings.xml
@@ -379,4 +379,10 @@
     <string name="prebolussmall_autodrive_mode_summary"><![CDATA[use by an early meal detection, bg > 100, predictionBG > 180. The idea is when we get a early detection sending a small smb to avoid negative iob or late correction. can be a good approach for a small snack.]]></string>
     <string name="prebolussmall_autodrive_mode_title">snack autodrive prebolus/early meal detection</string>
     <string name="user_preferences_title_menu">Profilo utente AIMI</string>
+    <string name="autodrive_preferences_title_menu">FCL - Autodrive - Rilevamento pasto autom.</string>
+    <string name="manual_modes_preferences_title_menu">HCL - Pasti/Attività manuali</string>
+    <string name="bg_under_120_preferences_title_menu"><![CDATA[Glicemia < 120 - Impostazioni]]></string>
+    <string name="bg_over_120_preferences_title_menu">Glicemia > 120 - Impostazioni</string>
+    <string name="aaps_preferences_title_menu">Sensibilità - Impostazioni AAPS</string>
+    <string name="user_preferences_title_menu">Global User Preferences</string>
 </resources>
